crates/nidus/tests/ui/openapi_tags_must_be_strings.stderr
error: #[openapi] tags must be string literals
 --> tests/ui/openapi_tags_must_be_strings.rs:9:5
  |
9 |     #[openapi(summary = "Find user by ID", tags = ["users", 42])]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `openapi` (in Nightly builds, run with -Z macro-backtrace for more info)
